# ficl

./: .cirrus.yml  .clang-format  .gitignore  .travis.yml  CMakeLists.txt  LICENSE.md  README.md  ficl.spec  ficllocal.h.in
.gear/: rules
.gear/tags/: list
doc/: CMakeLists.txt  ficl.1  main.tex
doc/TeX_files/: 00_intro.tex  01_ans_info.tex  02_api.tex  03_debugger.tex  04_locals.tex  05_oop.tex  06_parser.tex  07_history.tex  08_upgrading.tex  09_oo_idioms.tex  10_tutorial.tex  11_c_wrap.tex
ficlplatform/: makedef.py
softcore/: CMakeLists.txt  makesoftcore.c  marker.fr  oo.fr  softcore.fr  string.fr
src/: extras.c  ficl.h  fileaccess.c  main.c  softcore.c  system.c  vm.c
